--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,8 +241,10 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  /* background: url("../img/image.png") top center; */
+  background: url("https://wallpapercave.com/wp/wp2757874.gif");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #hero:before {
